--- a/WEB/index.html
+++ b/WEB/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        // Función para descargar el archivo automáticamente
+        // Función para descargar el archivo automáticamente o abrir el calendario si es compatible
         function downloadFile() {
             // Obtener el valor del parámetro 'event' de la URL
             const urlParams = new URLSearchParams(window.location.search);
@@ -18,50 +18,59 @@
                 return;
             }
 
-            // Construir la URL con el parámetro 'event'
+            // Construir la URL con el parámetro 'event' para obtener el archivo .ics
             const fetchUrl = `https://rememberpro.azurewebsites.net/api/event?event=${eventParam}&code=X6EjI-KK5EDT9cd1enwLvWGUSdrnSHDynGm1tZ7ct9e9AzFu_zDkkA%3D%3D`;
 
-            fetch(fetchUrl, {
-                method: 'GET'
-            })
-            .then(response => response.json())
-            .then(data => {
-                const fileContents = atob(data.fileContents);
-                const contentType = data.contentType;
-                const fileDownloadName = data.fileDownloadName;
+            // Comprobar si el protocolo `webcal` es soportado (Safari u otros)
+            const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
+            if (isSafari) {
+                // Si es Safari, usar webcal:// para abrir el archivo .ics en el calendario
+                const webcalUrl = fetchUrl.replace('https://', 'webcal://');
+                window.location.href = webcalUrl;
+            } else {
+                // Si no soporta webcal (ej: Chrome), proceder con la descarga del archivo .ics
+                fetch(fetchUrl, {
+                    method: 'GET'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    const fileContents = atob(data.fileContents);
+                    const contentType = data.contentType;
+                    const fileDownloadName = data.fileDownloadName;
 
-                // Crear un Uint8Array a partir del contenido del archivo
-                const byteArray = new Uint8Array(fileContents.length);
-                for (let i = 0; i < fileContents.length; i++) {
-                    byteArray[i] = fileContents.charCodeAt(i);
-                }
+                    // Crear un Uint8Array a partir del contenido del archivo
+                    const byteArray = new Uint8Array(fileContents.length);
+                    for (let i = 0; i < fileContents.length; i++) {
+                        byteArray[i] = fileContents.charCodeAt(i);
+                    }
 
-                // Crear un blob con el contenido del archivo
-                const blob = new Blob([byteArray], { type: contentType });
+                    // Crear un blob con el contenido del archivo
+                    const blob = new Blob([byteArray], { type: contentType });
 
-                // Crear un enlace temporal para descargar el archivo
-                const link = document.createElement('a');
-                link.href = window.URL.createObjectURL(blob);
-                link.download = fileDownloadName;
+                    // Crear un enlace temporal para descargar el archivo
+                    const link = document.createElement('a');
+                    link.href = window.URL.createObjectURL(blob);
+                    link.download = fileDownloadName;
 
-                // Añadir el enlace al cuerpo del documento y hacer clic en él para descargar el archivo
-                document.body.appendChild(link);
-                link.click();
+                    // Añadir el enlace al cuerpo del documento y hacer clic en él para descargar el archivo
+                    document.body.appendChild(link);
+                    link.click();
 
-                // Eliminar el enlace del documento
-                document.body.removeChild(link);
+                    // Eliminar el enlace del documento
+                    document.body.removeChild(link);
 
-                // Esperar a que el navegador complete la descarga antes de cerrar la ventana
-                link.addEventListener('click', () => {
-                    window.URL.revokeObjectURL(link.href); // Limpiar la URL creada
-                    setTimeout(() => {
-                        window.close(); // Cerrar la ventana después de la descarga
-                    }, 1000); // Tiempo suficiente para que la descarga comience
+                    // Esperar a que el navegador complete la descarga antes de cerrar la ventana
+                    link.addEventListener('click', () => {
+                        window.URL.revokeObjectURL(link.href); // Limpiar la URL creada
+                        setTimeout(() => {
+                            window.close(); // Cerrar la ventana después de la descarga
+                        }, 1000); // Tiempo suficiente para que la descarga comience
+                    });
+                })
+                .catch(error => {
+                    console.error('Error al descargar el archivo:', error);
                 });
-            })
-            .catch(error => {
-                console.error('Error al descargar el archivo:', error);
-            });
+            }
         }
 
         // Ejecutar la función cuando la página se cargue
